--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "node src/app.js",
     "server": "cd Pokemon-Showdown && npm start",
     "prettier": "pretty-quick --staged --pattern \"**/*.*(js|jsx|ts|tsx)\"",
-    "prettier-check": "prettier --check \"**/*.*(js|jsx|ts|tsx)\""
+    "prettier-check": "prettier --check \"**/*.*(js|jsx|ts|tsx)\"",
+    "prettier-full": "prettier --write \"**/*.*(js|jsx|ts|tsx)\""
   },
   "prettier": {
     "trailingComma": "es5",
